# AndroidCyaml

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
.github/workflows/: android.yml  release.yml
LICENSES/: zashboard-MIT.txt
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/assets/: default-config.yaml  geodata.version
app/src/main/assets/zashboard/: index.html  sw.js
app/src/main/assets/zashboard/assets/: ToolsPage-BysfVH0-.js  clash-BDkLShJR.js  clash-IK9FC7Yj.js  clash-JTQHQqgR.js  index-Crxngegy.js  index-DfwLHmIx.js  singbox-D3tVjU74.js  singbox-Dfzn1etr.js  (+1 more)
app/src/main/baselineProfiles/: startup-prof.txt
app/src/main/cpp/: CMakeLists.txt  mihomo_jni.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_vpn_key.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
docs/: ARCHITECTURE.md
native/mihomo/: go.mod  main.go
patches/: mihomo-android-vpn.patch
patches/mihomo/: 0001-androidcyaml-jni-runtime.patch  0001-androidcyaml-platform-hooks.patch  0002-androidcyaml-tun-contract.patch  0003-androidcyaml-platform-hooks.patch  README.md  androidcyaml-jni-runtime.mbox  series
scripts/: build_hev_socks5_tunnel.sh  build_mihomo.sh  fetch_geodata.sh  fetch_zashboard.sh  verify_art_optimization.sh  verify_native_runtime.sh
(+52 files in other folders)
